--- a/yaml-canary.yml
+++ b/yaml-canary.yml
@@ -41,10 +41,10 @@ stages:
                   overrides: |
                     gateway.image.repository:expertdaysregistry.azurecr.io/gateway
                     gateway.ingress.hosts:{miferrac.gateway.5.6.7.8.nip.io}
-                    gateway.ingress.annotations."kubernetes.io/ingress.class":traefik
+                    gateway.ingress.annotations."kubernetes\.io/ingress\.class":traefik
                     gateway.image.tag:$(Build.BuildId)
                     bikesharingweb.ingress.hosts:{miferrac.bikesharingweb.5.6.7.8.nip.io}
-                    bikesharingweb.ingress.annotations."kubernetes.io/ingress.class":traefik
+                    bikesharingweb.ingress.annotations."kubernetes\.io/ingress\.class":traefik
                     bikes.image.repository:expertdaysregistry.azurecr.io/bikes
                     bikes.image.tag:$(Build.BuildId)
                     billing.image.repository:expertdaysregistry.azurecr.io/billing
