--- a/yaml-canary.yml
+++ b/yaml-canary.yml
@@ -60,6 +60,13 @@ stages:
                     bikesharingweb.image.repository:expertdaysregistry.azurecr.io/bikesharingweb
                     bikesharingweb.image.tag:$(Build.BuildId)
                 displayName: bake helm chart
+              - script: echo $(bake.manifestsBundle) > manifestBundle.yml
+                workingDirectory: '$(System.DefaultWorkingDirectory)'
+              - task: PublishPipelineArtifact@1
+                inputs:
+                  targetPath: '$(System.DefaultWorkingDirectory)/manifestBundle.yml'
+                  artifact: 'helmBakedChart'
+                  publishLocation: 'pipeline'
             deploy:
               steps: 
               - task: KubernetesManifest@0
