Update azure-pipelines-build-reservation-engine.yml for Azure Pipelines

--- a/azure-pipelines-build-reservation-engine.yml
+++ b/azure-pipelines-build-reservation-engine.yml
@@ -16,11 +16,13 @@ stages:
     pool:
       vmImage: ubuntu-latest
     steps:
+
     - task: Docker@2
       displayName: Build an image
       inputs:
         containerRegistry: 'DockerHub-phenixita'
-        repository: 'phenixita'
+        repository: 'reservationengine'
         command: 'buildAndPush'
         Dockerfile: 'samples/BikeSharingApp/ReservationEngine/**/Dockerfile'
         tags: '$(tag)'
+
