--- a/azure-pipelines-build-reservation-engine.yml
+++ b/azure-pipelines-build-reservation-engine.yml
@@ -2,8 +2,7 @@
 # Build a Docker image
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
-trigger:
- - miferrac
+trigger: none
 
 resources:
 - repo: self
