Update yaml-canary.yml for Azure Pipelines

--- a/yaml-canary.yml
+++ b/yaml-canary.yml
@@ -68,7 +68,7 @@ stages:
                   namespace: 'miferrac'
                   strategy: 'canary'
                   percentage: '50'
-                  manifests: '$(Pipeline.Workspace)/helmBakedChart'
+                  manifests: '$(Pipeline.Workspace)/helmBakedChart/'
                 displayName: deploy app updates
             # postRouteTraffic: 
             #   pool: server
