--- a/azure-pipelines-full.yml
+++ b/azure-pipelines-full.yml
@@ -11,7 +11,7 @@ stages:
   - job: Build
     displayName: Build Container Images
     pool:
-      vmImage: 'ubuntu-latest'
+      vmImage: 'ubuntu-18.04'
     steps:
     - task: Docker@2
       inputs:
@@ -76,7 +76,7 @@ stages:
     displayName: Deploy job
     environment: test
     pool:
-      name: 'ubuntu-latest'
+      name: 'ubuntu-18.04'
     strategy:
       runOnce:
         deploy:
