--- a/azure-pipelines-full.yml
+++ b/azure-pipelines-full.yml
@@ -108,7 +108,7 @@ stages:
 
                 echo ""
                 echo "helm install traefik ingress controller"
-                helm upgrade "bikesharing-traefik" stable/traefik \
+                helm upgrade "bikesharing-traefik-mf" stable/traefik \
                   --namespace $(CLUSTER_NAMESPACE) --create-namespace \
                   --set kubernetes.ingressClass=traefik \
                   --set fullnameOverride=bikesharing-traefik \
@@ -120,14 +120,14 @@ stages:
                 echo "Waiting for BikeSharing ingress Public IP to be assigned..."
                 while [ -z "$PUBLICIP" ]; do
                   sleep 5
-                  PUBLICIP=$(kubectl get svc -n $(CLUSTER_NAMESPACE) bikesharing-traefik -o jsonpath={.status.loadBalancer.ingress[0].ip})
+                  PUBLICIP=$(kubectl get svc -n $(CLUSTER_NAMESPACE) bikesharing-traefik-mf -o jsonpath={.status.loadBalancer.ingress[0].ip})
                 done
 
                 helm dependency update samples/BikeSharingApp/charts
 
                 echo ""
                 echo "Install applications in the cluster"
-                helm upgrade "bikesharingapp" samples/BikeSharingApp/charts \
+                helm upgrade "bikesharingapp-mf" samples/BikeSharingApp/charts \
                   --set bikesharingweb.ingress.hosts={$(CLUSTER_NAMESPACE).bikesharingweb.$PUBLICIP.nip.io} \
                   --set gateway.ingress.hosts={$(CLUSTER_NAMESPACE).gateway.$PUBLICIP.nip.io} \
                   --set bikesharingweb.ingress.annotations."kubernetes\.io/ingress\.class"=traefik \
