--- a/yaml-canary.yml
+++ b/yaml-canary.yml
@@ -64,8 +64,8 @@ stages:
               - task: KubernetesManifest@0
                 inputs:
                   action: 'deploy'
-                  kubernetesServiceConnection: 'experdaysaks-expertdaysakscluster-canarydemo-1614031660916'
-                  namespace: 'canarydemo'
+                  # kubernetesServiceConnection: 'experdaysaks-expertdaysakscluster-canarydemo-1614031660916'
+                  # namespace: 'canarydemo'
                   strategy: 'canary'
                   percentage: '50'
                   manifests: '$(Pipeline.Workspace)/helmBakedChart/**'
